# GhostBroker

./: .gitignore  .prettierrc.json  AGENTS.md  DESIGN.json  DESIGN.md  DORAHACKS.md  PRODUCT.md  README.md  SUBMISSION.md  app.json  eslint-report.json  eslint.config.js  gemini-conversation.md  package-lock.json  package.json  playwright.config.ts  terminal3-adk-onboarding-doc-gaps.md  terminal3docs.md  tsconfig.base.json  vitest.config.ts  vitest.workspace.ts
.hermes/: lint-after-contract.txt  list-out.txt
.specify/: feature.json
agent-client/: .env.example  package.json
agents/: .env.example  .gitignore  README.md  package.json  tsconfig.json
backend/: .env.example  debug-verify.ts  package.json  tsconfig.json  vitest.config.ts
backend/contracts/matching-policy/: Cargo.toml
backend/contracts/matching-policy/src/: lib.rs  matching.rs
backend/contracts/matching-policy/wit/: world.wit
contracts/: README.md  package.json
contracts/matching-policy/: Cargo.toml
contracts/matching-policy/src/: lib.rs  matching.rs
contracts/matching-policy/wit/: world.wit
database/: schema.sql
docs/: infrastructure-gaps.md  settlement-rails.md  terminal3-adk-onboarding-doc-gaps.md
examples/: agent-buyer.ts  agent-lifecycle.sh  agent-seller.ts
frontend/: .env.example  index.html  package.json  tsconfig.json  vercel.json  vite.config.ts
negotiation-core/: package.json  tsconfig.json
scripts/: publish-matching.ts  seed-e2e-agents.ts  setup-trade-pair-helper.ts  setup-trade-pair.README.md  setup-trade-pair.ts  sync-heroku-env.mjs  verify-matching-contract.ts  verify-t3n-tenant.ts  watch-trade-pair.ts
t3-enclave/: .env.example  package.json  tsconfig.json  (+1 more)
(+500 files in other folders)
