[package]
name = "matching-policy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]

# Same dependency set as the procurement-policy reference contract
# (`ghostbroker-delegation-reference/contracts/procurement-policy/`),
# so the build is reproducible without adding new toolchain pieces.
# `wit-bindgen` macro mode lets us avoid the `cargo-component`
# plugin; the `cdylib` crate-type emits the raw `.wasm` the T3
# `client.contracts.publish({ wasm })` call expects.
[dependencies]
wit-bindgen = { version = "0.49", default-features = false, features = ["macros", "realloc"] }
serde = { version = "1.0", default-features = false, features = ["derive", "alloc"] }
serde_json = { version = "1.0", default-features = false, features = ["alloc"] }
sha2 = { version = "0.10", default-features = false }

[profile.release]
opt-level = "s"
lto = true
codegen-units = 1
strip = true
